# mcp-council-of-translation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: localization-council-prompt-agent-spec.zh-CN.txt
mydocs/: localization-council-role-system-design.zh-CN.txt
scripts/: run-server.sh
src/council_of_translation/: prompts.py  server.py
src/council_of_translation/council/: state.py
src/council_of_translation/localization/: __init__.py  prompt_builders.py  roles.py  schemas.py  workflow.py
src/council_of_translation/tools/: __init__.py  debate.py  history.py  results.py  review.py  voting.py
src/council_of_translation/ui/: templates.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_localization_review.py  test_security.py
