[project]
name = "Council-of-Translation"
version = "0.1.2"
description = "MCP server for multi-agent localization translation review"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0.2",
]

[project.scripts]
council_of_translation = "council_of_translation.server:main"
mcp_council_of_translation = "council_of_translation.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"
